# cart-multi-agent

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  utils.py
deployment/: local.py  remote.py
service_coordinator_agent/: agent.py  agent_old.py  api_spec.yaml  openapi.json  order_capture.yaml  prompt.py  requirements.txt  salesitem_api.yaml  server.py  server_working.py  weather_api.yaml
service_coordinator_agent/generated_client/: README.md  pyproject.toml  setup.py
service_coordinator_agent/generated_client/.openapi-generator/: FILES
service_coordinator_agent/generated_client/docs/: DefaultApi.md  FetchServicePricesRequest.md
service_coordinator_agent/generated_client/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
service_coordinator_agent/generated_client/test/: test_default_api.py  test_fetch_service_prices_request.py
service_coordinator_agent/generated_order_capture_client/: .gitlab-ci.yml  .travis.yml  pyproject.toml  setup.py  tox.ini
service_coordinator_agent/generated_order_capture_client/.openapi-generator/: FILES
service_coordinator_agent/generated_order_capture_client_01/: README.md
service_coordinator_agent/generated_salesitem_client/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
service_coordinator_agent/generated_weather_client/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
service_coordinator_agent/shopify_mcp/: agent.py  openai_generator.py  prompt.py  schemas.py  server.py
(+952 files in other folders)
